--- a/public/partials/add_transaction.html
+++ b/public/partials/add_transaction.html
@@ -53,6 +53,26 @@
                     <div class="panel-heading">Transaction details</div>
                     <div class="panel-body">
                         <div class="form-group">
+                            <div class="col-lg-5">
+                                <div class="input-group" style="margin-top: 4px">
+                                    <span class="input-group-addon">
+                                        <input type="radio" name="format" value="sale">
+                                    </span>
+                                    <label class="control-label" style="margin-left: 5px">Sale</label>
+                                </div><!-- /input-group -->
+                            </div>
+
+                            <div class="col-lg-5">
+                                <div class="input-group" style="margin-top: 4px">
+                                    <span class="input-group-addon">
+                                        <input type="radio" name="format" value="buy">
+                                    </span>
+                                    <label class="control-label" style="margin-left: 5px">Buy</label>
+                                </div><!-- /input-group -->
+                            </div>
+                        </div>
+
+                        <div class="form-group">
                             <div class="col-lg-10">
                                 <input type="number" name="" placeholder="Vehicle identification number (VIN)" class="form-control" required>
                             </div>
