Add UI for adding new transaction and controllers

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -12,6 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
     <script src="javascripts/auto_exchange.js"></script>
+    <script src="javascripts/data.js"></script>
 </head>
 <body ng-app="auto_exchange">
 <div ng-view></div>
