--- a/public/partials/add_transaction.html
+++ b/public/partials/add_transaction.html
@@ -1,5 +1,15 @@
 <div ng-include="'partials/navigation_menu.html'"></div>
 <div class="container padding-body">
+    <div ng-show="found" class="alert alert-success alert-dismissible col-md-5 col-md-offset-1" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                aria-hidden="true">&times;</span></button>
+        <strong>Matching customer found</strong>
+    </div>
+    <div ng-show="error" class="alert alert-danger alert-dismissible col-md-5 col-md-offset-1" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                aria-hidden="true">&times;</span></button>
+        <strong>Customer not found, please fill in details to add new</strong>
+    </div>
     <div class="row" style="margin-top: 70px; margin-left: 20px;">
         <div class="col-md-9">
             <form class="form-horizontal form-item-details">
@@ -8,43 +18,43 @@
                     <div class="panel-body">
                         <div class="form-group">
                             <div class="col-lg-5">
-                                <input type="text" name="" placeholder="Customer SSN" class="form-control"
-                                       ng-model="" value="" required>
+                                <input type="text" name="ssn" placeholder="Customer SSN" class="form-control"
+                                       string-to-number ng-model="customer.ssn" value="customer.ssn" required>
                             </div>
                             <div class="col-lg-2">
-                                <button class="btn btn-primary">Check</button>
+                                <button class="btn btn-primary" ng-click="checkCustomer()">Check</button>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-lg-5">
-                                <input type="text" name="" placeholder="First name" class="form-control"
-                                       ng-model="" value="" required>
+                                <input type="text" name="firstname" placeholder="First name" class="form-control"
+                                       ng-model="customer.first_name" value="customer.first_name" required ng-disabled="isDisabled">
                             </div>
                             <div class="col-lg-5">
-                                <input type="text" name="" placeholder="Last name" class="form-control"
-                                       ng-model="" value="" required>
+                                <input type="text" name="lastname" placeholder="Last name" class="form-control"
+                                       ng-model="customer.last_name" value="customer.last_name" required ng-disabled="isDisabled">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-lg-5">
                                 <input type="text" name="" placeholder="Driving license" class="form-control"
-                                       ng-model="" value="" required>
+                                       ng-model="customer.driving_license_number" value="customer.driving_license_number" required ng-disabled="isDisabled">
                             </div>
                             <div class="col-lg-2">
                                 <input type="text" name="" placeholder="Age" class="form-control"
-                                       ng-model="" value="" required>
+                                       ng-model="customer.age" value="customer.age" required ng-disabled="isDisabled">
                             </div>
                             <div class="col-lg-2">
-                                <select class="form-control" required>
-                                    <option >Male</option>
-                                    <option >Female</option>
+                                <select class="form-control" ng-model="customer.gender" ng-disabled="isDisabled" required>
+                                    <option disabled value="">Select</option>
+                                    <option ng-selected="customer.gender == val.name" ng-repeat="val in gender" value="val.value">{{ val.name }}</option>
                                 </select>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-lg-8">
                                 <input type="text" name="" placeholder="Address" class="form-control"
-                                       ng-model="" value="" required>
+                                       ng-model="customer.address" value="customer.address" ng-disabled="isDisabled" required>
                             </div>
                         </div>
                     </div>
@@ -56,7 +66,7 @@
                             <div class="col-lg-5">
                                 <div class="input-group" style="margin-top: 4px">
                                     <span class="input-group-addon">
-                                        <input type="radio" name="format" value="sale">
+                                        <input type="radio" name="format" value="sale" ng-model="vehicle.type">
                                     </span>
                                     <label class="control-label" style="margin-left: 5px">Sale</label>
                                 </div><!-- /input-group -->
@@ -65,7 +75,7 @@
                             <div class="col-lg-5">
                                 <div class="input-group" style="margin-top: 4px">
                                     <span class="input-group-addon">
-                                        <input type="radio" name="format" value="buy">
+                                        <input type="radio" name="format" value="buy" ng-model="vehicle.type">
                                     </span>
                                     <label class="control-label" style="margin-left: 5px">Buy</label>
                                 </div><!-- /input-group -->
@@ -74,43 +84,47 @@
 
                         <div class="form-group">
                             <div class="col-lg-10">
-                                <input type="number" name="" placeholder="Vehicle identification number (VIN)" class="form-control" required>
+                                <input type="number" name="vin" placeholder="Vehicle identification number (VIN)" class="form-control"
+                                       ng-model="vehicle.vin" required>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-lg-4">
-                                <input type="number" name="" placeholder="Old license plate" class="form-control" required>
+                                <input type="number" name="old_license_plate" placeholder="Old license plate" class="form-control"
+                                       ng-model="vehicle.old_license_plate" required>
                             </div>
                             <div class="col-lg-4">
-                                <input type="number" name="" placeholder="New license plate" class="form-control" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-lg-4">
-                                <input type="number" name="" placeholder="List price" class="form-control" required>
-                            </div>
-                            <div class="col-lg-4">
-                                <input type="number" name="" placeholder="Final price" class="form-control" required>
+                                <input type="number" name="new_license_plate" placeholder="New license plate" class="form-control"
+                                       ng-model="vehicle.new_license_plate" required>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-lg-4">
-                                <select class="form-control" required>
-                                    <option disabled selected>Manufacturer</option>
-                                    <option >Honda</option>
-                                    <option >Mercedes</option>
+                                <input type="number" name="list_price" placeholder="List price" class="form-control"
+                                       ng-model="vehicle.list_price" required>
+                            </div>
+                            <div class="col-lg-4">
+                                <input type="number" name="final_price" placeholder="Final price" class="form-control"
+                                       ng-model="vehicle.final_price" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-lg-4">
+                                <select class="form-control" ng-change="getModels(carId)" ng-model="carId" required>
+                                    <option value="" disabled>Manufacturer</option>
+                                    <option ng-repeat="manufacturer in cars.manufacturer" ng-value="manufacturer.id">{{ manufacturer.name }}</option>
                                 </select>
                             </div>
                             <div class="col-lg-4">
-                                <select class="form-control" required>
-                                    <option disabled selected>Model</option>
-                                    <option >CLS</option>
-                                    <option >XLS</option>
+                                <select class="form-control" ng-model="vehicle.model" required>
+                                    <option value="" disabled>Model</option>
+                                    <option ng-repeat="model in models" ng-value="model.value">{{ model.name }}</option>
                                 </select>
                             </div>
                             <div class="col-lg-4">
-                                <select class="form-control" required>
-                                    <option disabled selected>Make year</option>
+                                <select class="form-control" ng-model="vehicle.year" required>
+                                    <option disabled value="">Make year</option>
+                                    <option ng-repeat="year in years" ng-value="year.value">{{ year.name }}</option>
                                 </select>
                             </div>
                         </div>
@@ -118,7 +132,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-lg-3 col-lg-offset-9">
-                        <button type="submit" class="form-control btn btn-primary" ng-click="">Add</button>
+                        <button type="submit" class="form-control btn btn-primary" ng-click="addTransaction()">Add</button>
                     </div>
                 </div>
             </form>
