--- a/public/partials/navigation_menu.html
+++ b/public/partials/navigation_menu.html
@@ -14,7 +14,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class=""><a href="">Change branch </a></li>
+                <li><a href="#/branch">Change branch </a></li>
                 <li><a href="">Cars </a></li>
                 <li><a href="">Customers </a></li>
                 <li><a href="">Transactions </a></li>
