--- a/public/partials/branch.html
+++ b/public/partials/branch.html
@@ -7,10 +7,13 @@
                 <div class="panel-heading">Company branches</div>
                 <div class="panel-body">
                     <div class="row">
-                        <div class="col-sm-2 col-sm-offset-7">
+                        <div class="col-sm-2">
+                            <button class="btn btn-primary" ng-click="useBranch()" ng-disabled="actionDisabled">Use</button>
+                        </div>
+                        <div class="col-sm-2 col-sm-offset-5">
                             <button class="btn btn-primary" ng-click="branchInfo()">Add branch</button>
                         </div>
-                        <div class="col-xs-2">
+                        <div class="col-sm-2">
                             <button class="btn btn-primary" ng-click="branchInfo()" ng-disabled="actionDisabled">Update branch</button>
                         </div>
                     </div>
@@ -21,7 +24,7 @@
                                 <td>Phone number</td>
                                 <td>Location</td>
                             </tr>
-                            <tr class="clickable-row {{selected}}" ng-repeat="branch in branches" ng-click="setSelected(branch.branch_id)" >
+                            <tr class="clickable-row {{selected}}" ng-repeat="branch in branches" ng-click="setSelected(branch.branch_id, branch.location)" >
                                 <td>{{ branch.branch_id }}</td>
                                 <td>{{ branch.phone_number }}</td>
                                 <td>{{ branch.location }}</td>
