--- a/public/partials/navigation_menu.html
+++ b/public/partials/navigation_menu.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Auto Exchange</a>
+            <a class="navbar-brand" href="#/">Auto Exchange</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -17,10 +17,11 @@
                 <li><a href="#/branch">Change branch </a></li>
                 <li><a href="">Cars </a></li>
                 <li><a href="">Customers </a></li>
-                <li><a href="">Transactions </a></li>
+                <li><a href="#/transactions">Transactions </a></li>
+                <li style="margin-left: 35px"><a>Current branch: {{ current_branch.location }} ({{ current_branch.branch_id }})</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="">Add new transaction </a></li>
+                <li><a href="#/check-cust">Add new transaction </a></li>
             </ul>
             <!--<ul class="nav navbar-nav navbar-right">-->
                 <!--<li><a href="#">Link</a></li>-->
