Add button for new customer

--- a/public/partials/check_customer.html
+++ b/public/partials/check_customer.html
@@ -11,8 +11,11 @@
                                 <input type="text" name="ssn" placeholder="Customer SSN" class="form-control"
                                        string-to-number ng-model="customer.ssn" value="customer.ssn" required>
                             </div>
-                            <div class="col-lg-2">
+                            <div class="col-lg-1">
                                 <button class="btn btn-primary" ng-click="checkCustomer()">Check</button>
+                            </div>
+                            <div class="col-lg-1" style="margin-left: 5px">
+                                <button class="btn btn-primary" ng-click="newCustomer()">New</button>
                             </div>
                         </div>
                     </div>
