--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -1,6 +1,8 @@
 <div ng-include="'partials/navigation_menu.html'"></div>
 <div class="container padding-body" ng-init="getBranchInfo()">
     <div class="row" style="margin-top: 70px; margin-left: 20px;">
-
+        <div class="col-lg-8 col-lg-offset-3">
+            <h1>Welcome to Auto Exchange</h1>
+        </div>
     </div>
 </div>
