--- a/public/partials/add_transaction.html
+++ b/public/partials/add_transaction.html
@@ -12,9 +12,6 @@
                                 <input type="text" name="ssn" placeholder="Customer SSN" class="form-control"
                                        string-to-number ng-model="customer.ssn" value="customer.ssn" required>
                             </div>
-                            <div class="col-lg-2">
-                                <button class="btn btn-primary" ng-click="checkCustomer()">Check</button>
-                            </div>
                         </div>
                         <div class="form-group">
                             <div class="col-lg-5">
@@ -38,7 +35,7 @@
                             <div class="col-lg-2">
                                 <select class="form-control" ng-model="customer.gender" ng-disabled="isDisabled" required>
                                     <option disabled value="">Select</option>
-                                    <option ng-selected="customer.gender == val.name" ng-repeat="val in gender" value="val.value">{{ val.name }}</option>
+                                    <option ng-selected="customer.gender == val.name" ng-repeat="val in gender" ng-value="val.value">{{ val.name }}</option>
                                 </select>
                             </div>
                         </div>
