--- a/public/partials/branch_info.html
+++ b/public/partials/branch_info.html
@@ -15,7 +15,7 @@
                                        ng-model="branch.email" value="branch.email" required>
                             </div>
                             <div class="col-lg-5">
-                                <input type="text" name="phone_number" placeholder="Phone number" class="form-control"
+                                <input type="text" maxlength="10" name="phone_number" placeholder="Phone number" class="form-control"
                                        ng-model="branch.phone_number" value="branch.phone_number" required>
                             </div>
                         </div>
