--- a/public/partials/transactions.html
+++ b/public/partials/transactions.html
@@ -19,7 +19,7 @@
                             </div>
                             <div class="col-lg-5" ng-show="isVin">
 
-                                <input type="text" name="search" placeholder="Search..." class="form-control"
+                                <input type="text" maxlength="17" name="search" placeholder="Search..." class="form-control"
                                        ng-model="searchText" value="" required>
                             </div>
                             <div class="col-lg-5" ng-show="!isVin">
