--- a/public/partials/branch.html
+++ b/public/partials/branch.html
@@ -10,11 +10,14 @@
                         <div class="col-sm-2">
                             <button class="btn btn-primary" ng-click="useBranch()" ng-disabled="actionDisabled">Use</button>
                         </div>
-                        <div class="col-sm-2 col-sm-offset-5">
+                        <div class="col-sm-2 col-sm-offset-3">
                             <button class="btn btn-primary" ng-click="branchInfo()">Add branch</button>
                         </div>
                         <div class="col-sm-2">
                             <button class="btn btn-primary" ng-click="branchInfo()" ng-disabled="actionDisabled">Update branch</button>
+                        </div>
+                        <div class="col-sm-2">
+                            <button class="btn btn-primary" ng-click="deleteBranch()" ng-disabled="actionDisabled">Delete branch</button>
                         </div>
                     </div>
                     <div class="table-responsive" style="margin-top: 15px">
