--- a/public/partials/add_transaction.html
+++ b/public/partials/add_transaction.html
@@ -40,6 +40,16 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <div class="col-lg-5">
+                                <input type="text" name="pri_email" placeholder="Primary Email" class="form-control"
+                                       ng-model="customer.primary_email" value="customer.primary_email" required ng-disabled="isDisabled">
+                            </div>
+                            <div class="col-lg-5">
+                                <input type="text" name="pri_mobile" maxlength="10" placeholder="Primary Mobile" class="form-control"
+                                       ng-model="customer.primary_mobile" value="customer.primary_mobile" required ng-disabled="isDisabled">
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <div class="col-lg-8">
                                 <input type="text" pattern="\w+ \w+.*" maxlength="40" name="" placeholder="Address" class="form-control"
                                        ng-model="customer.address" value="customer.address" ng-disabled="isDisabled" required>
@@ -115,10 +125,16 @@
                                     <option ng-repeat="model in models" ng-value="model.value">{{ model.name }}</option>
                                 </select>
                             </div>
-                            <div class="col-lg-4">
+                            <div class="col-lg-2">
                                 <select class="form-control" ng-model="vehicle.year" required>
                                     <option disabled value="">Make year</option>
                                     <option ng-repeat="year in years" ng-value="year.value">{{ year.name }}</option>
+                                </select>
+                            </div>
+                            <div class="col-lg-2">
+                                <select class="form-control" ng-model="vehicle.car_type" required>
+                                    <option disabled value="">Type</option>
+                                    <option ng-repeat="car_type in car_types" ng-value="car_type.value">{{ car_type.name }}</option>
                                 </select>
                             </div>
                         </div>
