--- a/public/partials/branch_info.html
+++ b/public/partials/branch_info.html
@@ -2,7 +2,7 @@
 <div class="container padding-body">
     <div class="row" style="margin-top: 70px; margin-left: 20px;">
         <div class="col-md-9">
-            <form class="form-horizontal form-item-details">
+            <form class="form-horizontal form-item-details" ng-submit="branchInfo()">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Company branch information</div>
                     <div class="panel-body">
@@ -33,7 +33,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-lg-3 col-lg-offset-9">
-                        <button type="submit" class="form-control btn btn-primary" ng-click="branchInfo()">{{ buttonText }}</button>
+                        <input type="submit" class="form-control btn btn-primary" value="{{ buttonText }}">
                     </div>
                 </div>
             </form>
