--- a/public/partials/add_transaction.html
+++ b/public/partials/add_transaction.html
@@ -61,7 +61,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-8">
-                                <input type="text" pattern="\w+ \w+.*" maxlength="40" name="" placeholder="Address" class="form-control"
+                                <input type="text"  maxlength="40" name="" placeholder="Address" class="form-control"
                                        ng-model="customer.address" value="customer.address" ng-disabled="isDisabled" required>
                             </div>
                         </div>
