--- a/public/partials/navigation_menu.html
+++ b/public/partials/navigation_menu.html
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="#/branch">Change branch </a></li>
-                <li><a href="">Cars </a></li>
+                <li><a href="#/cars"">Cars </a></li>
                 <li><a href="#/customers">Customers </a></li>
                 <li><a href="#/transactions">Transactions </a></li>
                 <li style="margin-left: 35px"><a>Current branch: {{ current_branch.location }} ({{ current_branch.branch_id }})</a></li>
